assets/css/style.css
:root {
  --darkbrown: #2e2a2b;
  --darkgrey: #545454;
  --lightgrey: #6b6b6b;
  --darkblue: #110542;
  --lightblue: #406999;
  --mustard: #cb9a28;
}

/*--------------fonts------------ */

.open-sans {
  font-family: "Open Sans", sans-serif;
}

.gar {
  font-family: "Cormorant Garamond", sans-serif;
  font-weight: 600;
}

.merri {
  font-family: "Merriweather", serif;
}

.mons {
  font-family: "Montserrat", sans-serif;
  font-size: 0.8rem;
}

.mus {
  color: var(--mustard);
}

/* ----------------------NAVBAR---------------------- */
.navbar {
  font-family: "Montserrat", sans-serif;
  font-weight: 400;
}

@media screen and (max-width: 320px) {
  .navbar-brand {
    margin: 0.01rem !important;
  }
  .navbar-toggler {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media screen and (max-width: 768px) {
  .navbar-brand {
    margin: 0.05rem !important;
  }
}

.custom-navbar {
  background: #6b6b6b;
}

.custom-navbar .navbar-nav .custom-nav-link {
  color: white;
}

.custom-navbar .navbar-nav .custom-nav-link:hover {
  color: var(--mustard);
}

.caret {
  margin-left: 0.3rem !important;
}

.navbar {
  -webkit-transition: all 0.6s ease-out;
  -moz-transition: all 0.6s ease-out;
  -o-transition: all 0.6s ease-out;
  -ms-transition: all 0.6s ease-out;
  transition: all 0.6s ease-out;
}

.navbar.scrolled {
  background: rgb(68, 68, 68); /* IE */
  background: rgba(0, 0, 0, 0.6); /* NON-IE */
}

/* ----------------------CAROUSEL---------------------- */
.carousel {
  max-height: 650px;
  overflow: hidden;
}

.carousel-item img {
  width: 100%;
  height: auto;
}
/* ----------------------BUTTONS---------------------- */

.btn-warning,
.btn-:hover,
.btn-warning:active,
.btn-warning:visited,
.btn-warning:focus {
  background-color: var(--mustard) !important;
  border-color: var(--mustard) !important;
  color: var(--darkbrown);
}

.btn-warning:hover {
  background-color: #d4aa48 !important;
  border-color: #d4aa48 !important;
  transition: all 1s ease;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
}

/* ----------------------HEADER---------------------- */

.landingName {
  width: 100%;
  height: auto;
}
/* SERVICES */

.services {
  background: rgb(68, 68, 68);
  color: white;
}

.servicesHeader {
  font-family: "Montserrat", sans-serif;
  color: var(--mustard);
}

.card {
  border-radius: 0;
  height: 20vw;
}

.card-img-top {
  width: 100%;
  height: 20vw;
  object-fit: cover;
  border-radius: 0;
}

.card-title {
  padding: 0;
  text-align: center !important;
  display: block;
  line-height: normal;
}

.overlay {
  /* background: rgb(30, 30, 30); */
  background: var(--mustard);
  opacity: 80%;
}

.d-overlay {
  background: rgb(30, 30, 30);
  opacity: 80%;
}

